Fix failing test, remove year in project names and creating dummy team project

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,7 @@
 // Common project specific stuff
 eclipse {
    project {
-      name = 'UrlShortener2016.common'
+      name = 'UrlShortener.common'
    }
 }
 
