Bugfixes to sponsor to pass Travis

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compile 'org.springframework.hateoas:spring-hateoas:0.20.0.RELEASE'
     compile 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
     compile ('com.maxmind.geoip:geoip-api:1.2.14')
+    compile 'com.maxmind.geoip2:geoip2:2.8.0'
 
     compile 'commons-validator:commons-validator:1.5.1'
 	compile 'com.google.guava:guava:19.0'
