--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 allprojects {
-   apply plugin: 'eclipse'
-   apply plugin: 'idea'   
+    apply plugin: 'eclipse'
+    apply plugin: 'java'
+    apply plugin: 'idea'
+
+    task stage(dependsOn: ['build', 'clean'])
+    build.mustRunAfter clean
 }
 
 // Instructions for each sub project
 subprojects {
-   apply plugin: 'java'
 
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
