--- a/team/build.gradle
+++ b/team/build.gradle
@@ -10,6 +10,10 @@ buildscript {
 apply plugin: "spring-boot"
 apply plugin: 'eclipse-wtp'
 
+jar {
+    baseName = 'ingweb'
+}
+
 // Common project specific stuff
 eclipse {
     project {
