--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 allprojects {
    apply plugin: 'eclipse'
-   apply plugin: 'idea'   
+   apply plugin: 'idea'
+    apply plugin: 'war'
 }
 
 // Instructions for each sub project
