--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,21 @@ subprojects {
     jar {
         baseName = 'ingweb'
     }
+
+    dependencies {
+        compile 'org.springframework.boot:spring-boot-starter-web'
+        compile 'javax.servlet:jstl'
+
+        compile 'org.springframework.boot:spring-boot-starter-log4j2'
+
+        compile 'org.springframework.boot:spring-boot-starter-websocket'
+
+        compile 'org.webjars:bootstrap:3.3.5'
+        compile 'org.webjars:jquery:2.1.4'
+
+        providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+        providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
+        testCompile 'org.springframework.boot:spring-boot-starter-test'
+    }
 }
