--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 allprojects {
-    apply plugin: 'spring-boot'
     apply plugin: 'eclipse'
     apply plugin: 'idea'
     apply plugin: 'java'
@@ -8,12 +7,8 @@ allprojects {
         baseName = 'ingweb'
     }
 
-    configurations {
-        providedRuntime
-        all {
-            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-        }
-    }
+    task stage(dependsOn: ['build', 'clean'])
+    build.mustRunAfter clean
 }
 
 // Instructions for each sub project
